# my-python-template

./: README.md  copier.yaml  pyproject.toml  requirements.txt
.github/workflows /: ci.yaml
src/my_python_template/: README.md.jinja  __init__.py  copier.yaml  pyproject.toml.jinja  slugify.jinja
src/my_python_template/.github/workflows/: ci.yaml
src/my_python_template/.github/workflows /: ci.yaml
src/my_python_template/src/{{ import_name }}/: __init__.py.jinja
src/my_python_template/tests/: __init__.py.jinja
tests/: conftest.py  test_dir.py  test_template.py
tests/temp/: .copier-answers.yml  README.md  pyproject.toml
tests/temp/src/test_project/: __init__.py
tests/temp/tests/: __init__.py
